# neomacs

./: .gitignore  configure.ac  flake.nix  shell.nix
.github/workflows/: vm-compat.yml
doc/display-engine/: TASKS.md  TASKS.md.old
docs/: elisp-vm-design.md  plan.md
docs/plans/: 2026-02-03-winit-wgpu-migration-design.md  2026-02-04-hidpi-scaling-design.md  (+1 more)
lisp/: image.el  loadup.el  neo-term.el
nix/: neomacs.nix
rust/neomacs-display/: Cargo.toml  build.rs
rust/neomacs-display/include/: neomacs_display.h
rust/neomacs-display/src/: effect_config.rs  ffi.rs  lib.rs  render_thread.rs  thread_comm.rs
rust/neomacs-display/src/backend/: mod.rs
rust/neomacs-display/src/backend/gtk4/: gsk_renderer.rs  hybrid_renderer.rs  image.rs  mod.rs  renderer.rs  video.rs  widget.rs
rust/neomacs-display/src/backend/tty/: mod.rs
rust/neomacs-display/src/backend/webkit/: view.rs
rust/neomacs-display/src/backend/wgpu/: backend.rs  events.rs  external_buffer.rs  glyph_atlas.rs  image_cache.rs  mod.rs  renderer.rs  vertex.rs  video_cache.rs  vulkan_dmabuf.rs
rust/neomacs-display/src/backend/wgpu/renderer/: blur.rs  mod.rs  overlays.rs
rust/neomacs-display/src/backend/wgpu/shaders/: blur.wgsl  glyph.wgsl  rounded_rect.wgsl  texture.wgsl
rust/neomacs-display/src/backend/wpe/: backend.rs  dmabuf.rs  mod.rs  platform.rs  sys.rs  view.rs
rust/neomacs-display/src/core/: buffer_transition.rs  char_utils.rs  cursor_animation.rs  error.rs  frame_glyphs.rs  gap_buffer.rs  glyph.rs  grid.rs  mod.rs  types.rs
rust/neomacs-display/src/ffi/: animation.rs  animation_effects.rs  layout.rs  threaded.rs  webkit.rs  window.rs
rust/neomacs-display/src/layout/: emacs_ffi.rs  emacs_types.rs  engine.rs  hit_test.rs  mod.rs  types.rs
rust/neomacs-display/src/render_thread/: mod.rs  multi_window.rs
rust/neomacs-display/src/terminal/: mod.rs  view.rs
rust/neomacs-display/src/text/: atlas.rs  engine.rs  mod.rs
rust/neomacs-display/tests/: threaded_test.rs
src/: Makefile.in  dispextern.h  dispnew.c  emacs.c  frame.c  frame.h  ftcrfont.c  image.c  lisp.h  neomacs_display.h  neomacsfns.c  neomacsgui.h  neomacsterm.c  neomacsterm.h  termhooks.h  terminal.c  xdisp.c  xfaces.c
(+316 files in other folders)
