[package]
name = "neomacs-display"
version = "0.1.0"
edition = "2021"
authors = ["Neomacs Contributors"]
license = "GPL-3.0-or-later"
description = "GPU-accelerated display engine for Neomacs"
repository = "https://github.com/eval-exec/neomacs-1"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# GTK4 bindings (optional - for gtk4-backend feature)
gtk4 = { version = "0.9", optional = true }
gdk4 = { version = "0.9", features = ["v4_14"], optional = true }
gsk4 = { version = "0.9", optional = true }
gio = { version = "0.20", optional = true }
glib = { version = "0.20", optional = true }
graphene-rs = { version = "0.22.0-alpha.2", package = "graphene-rs", optional = true }

# Text rendering - Pure Rust stack
cosmic-text = "0.12"

# Legacy Pango (optional - for gtk4-backend feature)
pango = { version = "0.20", optional = true }
pangocairo = { version = "0.20", optional = true }

# GStreamer for video
gstreamer = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

# Winit + wgpu backend
winit = { version = "0.30", optional = true }
wgpu = { version = "23", optional = true }
raw-window-handle = { version = "0.6", optional = true }
arboard = { version = "3.4", optional = true }
bytemuck = { version = "1.18", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

# WPE WebKit - bindings generated via bindgen in build.rs
# No crate dependency - we generate sys bindings directly

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
bitflags = "2.0"
once_cell = "1.19"

# FFI
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"
which = "7.0"
bindgen = "0.71"
pkg-config = "0.3"

[features]
default = ["winit-backend", "video", "wpe-webkit"]
gtk4-backend = ["gtk4", "gdk4", "gsk4", "gio", "glib", "graphene-rs", "pango", "pangocairo"]
winit-backend = ["winit", "wgpu", "raw-window-handle", "arboard", "bytemuck", "pollster"]
tty-backend = []
video = ["gstreamer", "gstreamer-video"]
wpe-webkit = []

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
